# website

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  config.json  config_exemple.json
.github/workflows/: docker-image.yml  docker-publish.yml
backend/: Cargo.toml  build.rs
backend/src/: main.rs
backend/src/api/: account.rs  front.rs  mod.rs  oauth2.rs  webhook.rs
backend/src/ress/: frontpage.html
backend/src/utils/: auth_utils.rs  config_utils.rs  database_utils.rs  mod.rs  webhook_utils.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html
frontend/assets/: index.scss
frontend/assets/langs/: fr_FR.json
frontend/assets/legal/: cgu.html  privacy.html
frontend/src/: app.rs  backend_handler.rs  lib.rs  main.rs
frontend/src/ui/: auth.rs  color_scheme.rs  components_helper.rs  mod.rs  select_space.rs  space.rs
frontend/src/ui/components/: comment_components.rs  fiche_components.rs  mod.rs  utils_components.rs
frontend/src/ui/spaces/: admin_space.rs  fiche_space.rs  mod.rs
shared/: Cargo.toml
shared/src/: discord.rs  fiche_rp.rs  lib.rs  permissions.rs  user.rs  website_meta.rs
src/: config_utils.rs  main.rs
src/api/: github.rs  mod.rs  webhook.rs
src/ress/: frontpage.html
