[package]
name = "website-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["secure-cookies", "default"] }
anyhow = "1.0.79"
color-eyre = { version = "0.6.2" }
config = "0.13.4"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
octocrab = "0.33.3"
serde = "1.0.193"
serenity = "0.12.0"

[profile.release]
opt-level = 3
