[package]
name = "website-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["secure-cookies", "default"] }
anyhow = "1.0.79"
config = "0.14.0"
env_logger = "0.11.3"
lazy_static = "1.5.0"
octocrab = "0.38.0"
serde = "1.0.193"
serenity = "0.12.0"
log = "0.4.22"

[profile.release]
opt-level = 3
