[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["secure-cookies", "default"] }
anyhow = "1.0.79"
config = "0.14.0"
env_logger = "0.11.3"
lazy_static = "1.5.0"
octocrab = "0.39.0"
serde = "1.0.193"
serenity = "0.12.0"
log = "0.4.22"
mongodb = { version = "3.0.0", features = ["default", "zlib-compression"] }
once_cell = "1.19.0"
oauth2 = { version = "4.4.2", features = ["rustls-tls"] }
serde_json = "1.0.120"
actix-session = { version = "0.10.0", features = ["default", "cookie-session"] }
uuid = { version = "1.10.0", default-features = true, features = ["v7"] }
dashmap = "6.0.1"
shared = { version = "0.1.0", path = "../shared" }
reqwest = { version = "0.12.5", features = ["json"] }
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-cors = "0.7.0"

[profile.release]
opt-level = 3
