[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]

egui = { version = "0.29.1", features = ["default", "color-hex"] }
eframe = { version = "0.29.1", features = ["default"] }
egui_extras = { version = "0.29.1", features = ["default", "image", "chrono", "all_loaders", "gif", "syntect"] }

egui_commonmark = { version = "0.18.0", features = ["default", "better_syntax_highlighting", "load-images", "svg"] }
ehttp = { version = "0.5.0", features = ["json"] }

image = { version = "0.25.2", features = ["default"] }
env_logger = "0.11.5"
lazy_static = "1.4.0"
log = "0.4.22"
serde = "1.0.210"
serde_json = "1.0.128"
json-gettext = "4.0.10"
shared = { version = "0.1.0", path = "../shared" }
chrono = "0.4.38"
strum = { version = "0.26.3", features = ["derive"] }

# web:
[target.wasm32-unknown-unknown.dependencies]
wasm-cookies = "0.2.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-timer = "0.2.5"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = { version = "0.4.43" }
web-time = { version = "1.1.0", features = ["serde"] }
web-sys = "0.3.70"


[profile.release]
lto = true
opt-level = 3

[profile.dev]
opt-level = 2 # fast and small wasm

[profile.dev.package.egui_commonmark]
opt-level = 3
[profile.dev.package.egui]
opt-level = 3
[profile.dev.package.eframe]
opt-level = 3
[profile.dev.package.egui_extras]
opt-level = 3